fix: field settings contrast (#6281)

--- a/src/stylesheets/legacy-styles.css
+++ b/src/stylesheets/legacy-styles.css
@@ -918,7 +918,7 @@ pre,
     border: 0;
     background: none;
     cursor: pointer;
-    color: var(--color-blue-light);
+    color: var(--color-blue-mid);
   }
   .btn-link,
   .cfnext-btn-link {
